--- a/index.htm
+++ b/index.htm
@@ -84,13 +84,13 @@
           <optgroup label="Release">
             <option>0.3.0</option>
           </optgroup>
-        </select><br><br>
+        </select>
+      </div>    
     </div>
+    <br><br>
+    Powered by <a href="https://esphome.github.io/esp-web-tools/" target="_blank">ESP Web Tools</a>
+    <br><a href="https://github.com/steadramon/ESPGeiger" target="_blank">GitHub</a>
 
-      Powered by <a href="https://esphome.github.io/esp-web-tools/" target="_blank">ESP Web Tools</a>
-      <br><a href="https://github.com/steadramon/ESPGeiger" target="_blank">GitHub</a>
-    
-    </div>
   </div>
 <script>
   function checkSupported() {
