--- a/index.htm
+++ b/index.htm
@@ -109,13 +109,14 @@
           <option>Pulse</option>
           <option>Pulse (No PCNT)</option>
         </optgroup>
-        <optgroup label="ESPGeiger-HW">
-          <option>ESPGeiger-HW</option>
-        </optgroup>
         <optgroup label="Serial">
           <option>GC10</option>
           <option>GC10-next</option>
           <option>MightOhm</option>
+        </optgroup>
+        <optgroup label="Hardware">
+          <option>ESPGeiger-HW</option>
+          <option>CAJOE IOT-GM</option>
         </optgroup>
         <optgroup label="Test Build">
           <option>Test-Pulse</option>
@@ -131,7 +132,7 @@
       <div class="container inst-button">
         <esp-web-install-button
           id="inst"
-          manifest=""
+          manifest="bin/release/0_3_0/test/manifest.json"
         >
           <button class="btn" slot="activate">Install</button>
         </esp-web-install-button><br>
