Add GC10 firmwares

--- a/index.htm
+++ b/index.htm
@@ -99,6 +99,7 @@
     <h2>Welcome to the ESPGeiger web installer!</h2>
     <div id="flasher">
       <ol>
+        <li>Select your counter type</li>
         <li>Plug in your ESP to a USB port. We will install ESPGeiger <span id="verstr">X.X.X</span> to it.</li>
         <li id="coms">Hit "Install" and select the correct COM port. <a onclick="showSerialHelp()">No device found?</a></li>
         <li>Wait a while, the process is a lot faster if you stay on this tab.</li>
