--- a/index.htm
+++ b/index.htm
@@ -146,7 +146,8 @@
     </div>
     <br><br>
     Powered by <a href="https://esphome.github.io/esp-web-tools/" target="_blank">ESP Web Tools</a>
-    <br><a href="https://github.com/steadramon/ESPGeiger" target="_blank">GitHub</a>
+    <br><br>
+    <a href="https://github.com/steadramon/ESPGeiger" target="_blank">GitHub</a>
 
   </div>
 <script>
