--- a/index.htm
+++ b/index.htm
@@ -108,7 +108,7 @@
       <select id="buildtype" class="btn" onchange="setManifest()">
         <optgroup label="Pulse">
           <option data-manifest="pulse">Pulse</option>
-          <option data-manifest="pulse_no_pcnt">Pulse (No PCNT, ESP32 only)</option>
+          <option data-manifest="pulse_no_pcnt">Pulse - No PCNT (ESP32 only)</option>
         </optgroup>
         <optgroup label="Serial">
           <option data-manifest="gc10">GC10</option>
