--- a/index.htm
+++ b/index.htm
@@ -116,7 +116,7 @@
           <option data-manifest="mightyohm">MightyOhm</option>
         </optgroup>
         <optgroup label="Hardware">
-          <option data-manifest="espgeigerhw" data-advice="Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
+          <option data-manifest="espgeigerhw" data-advice="WebOTA is recommended. Download the latest firmware from GitHub and upload via the web interface. Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
           <option data-manifest="cajoeiot" data-advice="Please disconnect the ESP board from the mainboard first." data-nooled="true">CAJOE IOT-GM</option>
         </optgroup>
         <optgroup label="Test Build">
