--- a/index.htm
+++ b/index.htm
@@ -116,7 +116,7 @@
           <option data-manifest="mightyohm">MightyOhm</option>
         </optgroup>
         <optgroup label="Hardware">
-          <option data-manifest="espgeigerhw" data-advice="WebOTA is recommended. Download the latest firmware from GitHub and upload via the web interface. Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
+          <option data-manifest="espgeigerhw" data-advice="WebOTA is recommended. Download the latest firmware from GitHub and upload via the web interface.<br/>Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
           <option data-manifest="cajoeiot" data-advice="Please disconnect the ESP board from the mainboard first." data-nooled="true">CAJOE IOT-GM</option>
         </optgroup>
         <optgroup label="Test Build">
@@ -171,9 +171,9 @@
     var advice = buildtype_opt.dataset.advice;
     document.getElementById('advice').style.display = advice ? "block":"none";
     if (advice) {
-      document.getElementById('advice').textContent = advice;
+      document.getElementById('advice').innerHTML = advice;
     } else {
-      document.getElementById('advice').textContent = "";
+      document.getElementById('advice').innerHTML = "";
     }
 
     document.getElementById('inst').setAttribute('manifest',m);
