--- a/index.htm
+++ b/index.htm
@@ -102,7 +102,7 @@
         <li>Select your counter type.</li>
         <li>Plug in your ESP to a USB port. We will install ESPGeiger <span id="verstr">X.X.X</span> to it.</li>
         <li id="coms">Hit "Install" and select the correct COM port. <a onclick="showSerialHelp()">No device found?</a></li>
-        <li>Wait a while, the process is a lot faster if you stay on this tab.</li>
+        <li>Wait a while, the process is a lot faster if you stay on this tab.<br/><b>Note:</b> This will erase any current firmware and settings.</li>
       </ol><br><br>
       <h3>Geiger Counter Type</h3>
       <select id="buildtype" class="btn" onchange="setManifest()">
