--- a/index.htm
+++ b/index.htm
@@ -103,9 +103,10 @@
     <div id="flasher">
       <ol>
         <li>Select your counter type.</li>
-        <li>Plug in your ESP to a USB port. We will install ESPGeiger <span class="verstr" id="verstr">v0.3.9</span> to it.</li>
+        <li>Plug in your ESP to a USB port. We will install ESPGeiger <span class="verstr" id="verstr">v0.4.0</span> to it.</li>
         <li id="coms">Hit "Install" and select the correct COM port. <a onclick="showSerialHelp()">No device found?</a></li>
         <li>Wait a while, the process is a lot faster if you stay on this tab.<br/></li>
+        <li>Once installed, look for a new hotspot with the name format <b>ESPGeiger-XXXXXX</b><br/></li>
       </ol>
       <p><b>Note:</b> This will erase any current firmware and settings.</p><br>
       <h3>Geiger Counter Type</h3>
