--- a/index.htm
+++ b/index.htm
@@ -121,7 +121,7 @@
           <option data-manifest="mightyohm">MightyOhm</option>
         </optgroup>
         <optgroup label="Hardware">
-          <option data-manifest="espgeigerhw" data-advice="WebOTA is recommended. Download the latest firmware from GitHub and upload via the web interface.<br/>Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
+          <option data-manifest="espgeigerhw" data-advice="WebOTA is recommended. Download the <a download='espgeigerhw-firmware.v0.4.5.bin' href="/bin/espgeigerhw/espgeigerhw-firmware.bin">latest firmware</a> and upload via the web interface.<br/>Please disconnect the ESP board from the mainboard first." data-nooled="true">ESPGeiger-HW</option>
           <option data-manifest="cajoeiot" data-advice="Please disconnect the ESP board from the mainboard first." data-nooled="true">CAJOE IOT-GM</option>
         </optgroup>
         <optgroup label="Test Build">
